k8s/base/apps/services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: ghcr.io/kless3/user-service:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: ems
spec:
  selector:
    app: user-service
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
  namespace: ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
        - name: ticket-service
          image: ghcr.io/kless3/ticket-service:latest
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
  namespace: ems
spec:
  selector:
    app: ticket-service
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: ghcr.io/kless3/event-service:latest
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: ems
spec:
  selector:
    app: event-service
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: ghcr.io/kless3/payment-service:latest
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ems
spec:
  selector:
    app: payment-service
  ports:
    - port: 8084
      targetPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: ghcr.io/kless3/notification-service:latest
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8085
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: ems
spec:
  selector:
    app: notification-service
  ports:
    - port: 8085
      targetPort: 8085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: importer-service
  namespace: ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: importer-service
  template:
    metadata:
      labels:
        app: importer-service
    spec:
      containers:
        - name: importer-service
          image: ghcr.io/kless3/importer-service:latest
          ports:
            - containerPort: 8086
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8086
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: importer-service
  namespace: ems
spec:
  selector:
    app: importer-service
  ports:
    - port: 8086
      targetPort: 8086
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: ems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ghcr.io/kless3/api-gateway:latest
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: ems
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8083
      targetPort: 8083
